test_suite/alan-2022-examples/passing/000024_random.alan
source S function A(boolean _, integer array U) begin integer W; relax end function Gu2(boolean array __, integer b5) begin put "" end function _14() to integer array begin if 995 then relax end end begin boolean Nxuya, s; relax end
