test_suite/alan-2022-examples/failing/008520_mutation.alan
source S function P3(,) begin relax end begin relax end
